# timesink-os

./: Cargo.toml  README.md  build.sh  linker.ld  x86-unknown-mbr.json
.cargo/: config.toml
bootloader/: Cargo.toml  linker.ld  x86-unknown-bootloader.json
bootloader/.cargo/: config.toml
bootloader/runners/: x86-mbr.sh
bootloader/src/: disk.rs  main.rs  mbr.S  modes.rs  print.rs
bootloader/src/bios/: disk.rs
bootloaders/mbr-32bit/: Cargo.toml  build.sh  mbr-32bit-bootloader.json  run.sh
bootloaders/mbr-32bit/.cargo/: config.toml
bootloaders/mbr-32bit/runners/: x86-mbr.sh
bootloaders/mbr-32bit/src/: main.rs  mem_routines.rs
bootloaders/mbr-32bit/src/bios/: mod.rs  print.rs
kernel/: build.rs  i686-timesinkos-kernel.json  linker.ld  x86_64-timesinkos-kernel.json
kernel/.cargo/: config.toml
kernel/scripts/: build-mbr-32bit.sh  run-mbr-32bit.sh
kernel/src/: main.rs
src/: main.rs  mbr.S
