[workspace]

members = [
    'bootloader',
]

resolver = "3"

[profile.bootloader]
inherits = "dev"
# "Unwinding panics are not supported without std" according to cargo
panic = "abort"
# We need to optimize for binary size since the MBR need to fit in 510 bytes!
# This thing does not compile without opt level s on debug
opt-level = "s"
